master: SERVER-53837: Fix race of OplogFetcher access in TenantMigrationRecipientServiceTest.OplogApplierFails

GitOrigin-RevId: b2d1ddb3112df766789e34e25a6d3ad0bfa29dad